--- a/2-data-preperation/Makefile
+++ b/2-data-preperation/Makefile
@@ -6,16 +6,16 @@ OPT_PDF=--variable numbersections --toc --variable toc-depth=2 --variable docume
 # options cut: 
 
 md: $(FILE).Rmd
-	Rscript -e "library(knitr); knit('$(FILE).Rmd')"
+	../bin/k $(FILE).Rmd
 
 html:$(FILE).md
-	pandoc $(FILE).md -o $(FILE).html
+	pandoc $(FILE).md -s -c ../templates/html/pandoc.css --highlight-style pygments --mathjax -o $(FILE).html
 
-spdf: $(FILE).md
+spdf: $(FILE).md $(FILE).Rmd
 	pandoc $(FILE).md -o $(FILE).pdf --template mytemplate.tex --highlight-style tango
 
 tex: $(FILE).md 
-	pandoc $(FILE).md -o $(FILE).tex --template mytemplate.tex
+	pandoc $(FILE).md -o $(FILE).tex --template $(PDFTEMPLATE) -o $(FILE).tex
 
-pdf: $(FILE).md
+pdf: $(FILE).md $(FILE).Rmd
 	pandoc $(FILE).md -o $(FILE).pdf --template $(PDFTEMPLATE) --listings $(OPT_PDF)
