--- a/0-datamineR-introduction/Makefile
+++ b/0-datamineR-introduction/Makefile
@@ -1,6 +1,11 @@
 FILE=datamineR-introduction
+#PDFTEMPLATE=../templates/pdf/simple.tex
 PDFTEMPLATE=../templates/pdf/extended.tex
-OPT_PDF=--variable numbersections --toc --variable toc-depth=2 --variable documentclass=memoir --variable fontsize=11pt 
+# org 
+OPT_PDF= -V numbersections=numbersections -V toc=toc -V documentclass=memoir -V fontsize=11pt -V toc-depth=2  
+# simple 
+#OPT_PDF= -V documentclass=memoir -V fontsize=11pt -V toc-depth=2  
+
 # -F +implicit_header_references
 # --variable documentclass=tufte-handout 
 # options cut: 
@@ -15,7 +20,7 @@ spdf: $(FILE).md
 	pandoc $(FILE).md -o $(FILE).pdf --template mytemplate.tex --highlight-style tango
 
 tex: $(FILE).md 
-	pandoc $(FILE).md -o $(FILE).tex --template mytemplate.tex
+	pandoc $(FILE).md -o $(FILE).tex --template $(PDFTEMPLATE) # mytemplate.tex
 
 pdf: $(FILE).md
 	pandoc $(FILE).md -o $(FILE).pdf --template $(PDFTEMPLATE) --listings $(OPT_PDF)
